# ai-seminar

./: .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  GEMINI.md  GUIDE.md  README.md  pyproject.toml
.claude/commands/: qa.md
.gemini/commands/: qa.toml
.github/: copilot-instructions.md
guides/: AGENT_GUIDE_CORE.md  GUIDE_CORE.md  analyze.md  code.md  ingest.md  qa.md  search.md
papers/: README.md
references/: README.md
scripts/: convert_pdfs.py
sessions/_TEMPLATE/: README.md
topics/: README.md
topics/agents/: README.md
topics/engineering/: 0-skill-based-prompt-engineering.qmd  1-skill-based-prompt-example.qmd  README.md
topics/models/: README.md
topics/prompt-engineering/: README.md
topics/rag/: README.md
topics/tools/: README.md
