[project]
name = "ai-seminar"
version = "0.1.0"
description = "AI 지식 공유 세미나 아카이브 및 PDF→MD 변환 파이프라인"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "marker-pdf>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
target-version = "py310"
